After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 719957 - Icon for "Software updates have been installed" looks like a error/danger
Icon for "Software updates have been installed" looks like a error/danger
Status: RESOLVED FIXED
Product: gnome-software
Classification: Applications
Component: General
3.10.x
Other Linux
: Normal normal
: ---
Assigned To: GNOME Software maintainer(s)
GNOME Software maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2013-12-06 10:40 UTC by Andreas Nilsson
Modified: 2013-12-09 16:34 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (137.73 KB, image/png)
2013-12-06 10:41 UTC, Andreas Nilsson
Details

Description Andreas Nilsson 2013-12-06 10:40:47 UTC
This is the smallest of details, but the icon that pops up with the notification looks like something might have broke, since it shares the color with the dialog-error icon (the one that looks like this /!\ ).
Perhaps better to use the GNOME Software app icon here instead?
Comment 1 Andreas Nilsson 2013-12-06 10:41:30 UTC
Created attachment 263651 [details]
screenshot
Comment 2 Richard Hughes 2013-12-09 16:34:27 UTC
commit 82c4d571d308fe8a6ee2db674d8d74f3113cb5fc
Author: Richard Hughes <richard@hughsie.com>
Date:   Mon Dec 9 16:34:06 2013 +0000

    Be less alarming when notifying the user
    
    Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=719957