Be less alarming when notifying the user

Fixes: https://bugzilla.gnome.org/show_bug.cgi?id=719957